--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "2.0.7",
+    "com.unity.animation.rigging": "1.3.1",
     "com.unity.cinemachine": "3.1.4",
     "com.unity.cloud.gltfast": "6.13.1",
     "com.unity.collab-proxy": "2.9.3",
