opened in unity 6.2 on mac

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,5 @@
     "explorer.fileNesting.patterns": {
         "*.sln": "*.csproj"
     },
-    "dotnet.defaultSolution": "thesis-prototype.sln"
+    "dotnet.defaultSolution": "thesis-prototype.slnx"
 }
